@@ -2,20 +2,25 @@ package com.checkconsulting.proepargne.service;
 
 import com.checkconsulting.proepargne.dto.account.AccountOutDto;
 import com.checkconsulting.proepargne.dto.account.AccountUpdateDto;
-import com.checkconsulting.proepargne.mapper.AccountMapper;
-import com.checkconsulting.proepargne.repository.AccountRepository;
-import com.checkconsulting.proepargne.repository.CollaboratorRepository;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import com.checkconsulting.proepargne.enums.ManagementMode;
 import com.checkconsulting.proepargne.enums.PlanType;
 import com.checkconsulting.proepargne.exception.GlobalException;
-import com.checkconsulting.proepargne.model.*;
+import com.checkconsulting.proepargne.mapper.AccountMapper;
+import com.checkconsulting.proepargne.model.Account;
+import com.checkconsulting.proepargne.model.Collaborator;
+import com.checkconsulting.proepargne.model.Contract;
+import com.checkconsulting.proepargne.model.User;
+import com.checkconsulting.proepargne.repository.AccountRepository;
+import com.checkconsulting.proepargne.repository.CollaboratorRepository;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.List;
+
+import static com.checkconsulting.proepargne.enums.ManagementMode.DELEGATED;
+import static com.checkconsulting.proepargne.enums.RiskLevel.PRUDENT;
 
 @Service
 @Slf4j
@@ -28,7 +33,7 @@ public class AccountService {
     private final CollaboratorRepository collaboratorRepository;
 
     public AccountService(AccountRepository accountRepository, ContractService contractService,
-            AccountMapper accountMapper, User user, CollaboratorRepository collaboratorRepository) {
+                          AccountMapper accountMapper, User user, CollaboratorRepository collaboratorRepository) {
         this.contractService = contractService;
         this.accountMapper = accountMapper;
         this.user = user;
@@ -37,48 +42,50 @@ public class AccountService {
 
     }
 
-    public List<AccountOutDto> getCollaboratorAccounts() {
-        Collaborator collaborator = this.collaboratorRepository.findByEmail(user.getEmail()).get();
-        return collaborator.getAccountList().stream().map(account -> accountMapper.mapToAccountOutDto(account))
-                .collect(Collectors.toList());
+    public List<AccountOutDto> getCollaboratorAccounts() throws GlobalException {
+        Collaborator collaborator = this.collaboratorRepository.findByEmail(user.getEmail())
+                .orElseThrow(() -> new GlobalException("L'utilisateur connecte n'est pas enregistre en base de données", HttpStatus.NOT_FOUND));
+        return collaborator.getAccountList().stream().map(accountMapper::mapToAccountOutDto)
+                .toList();
     }
 
     public List<Account> createCollaboratorAccounts(Collaborator collaborator) throws GlobalException {
         ArrayList<Account> accounts = new ArrayList<>();
 
         Contract contract = contractService.getContractByAdminId();
-        log.info("Get contract");
-        PerecoContribution perecoContribution = contract.getPerecoContribution();
-        PeeContribution peeContribution = contract.getPeeContribution();
+        log.info("Get contract ");
 
-        if (perecoContribution.getRateSimpleContribution() != null
-                || perecoContribution.getRateSeniorityContribution() != null
-                || perecoContribution.getIntervalContributionFirst() != null) {
-            Account perecoAccount = Account.builder()
-                    .type(PlanType.PERECO)
-                    .amount(0F)
-                    .contract(contract)
-                    .collaborator(collaborator)
-                    .build();
-            accounts.add(perecoAccount);
-        }
-
-        if (peeContribution.getRateSimpleContribution() != null
-                || peeContribution.getRateSeniorityContribution() != null
-                || peeContribution.getIntervalContributionFirst() != null) {
+        if (contract.isPeeEnabled()) {
             Account peeAccount = Account.builder()
                     .type(PlanType.PEE)
                     .amount(0F)
                     .contract(contract)
                     .collaborator(collaborator)
+                    .managementMode(DELEGATED)
+                    .riskLevel(PRUDENT)
                     .build();
             accounts.add(peeAccount);
         }
+
+        if (contract.isPerecoEnabled()) {
+            Account perecoAccount = Account.builder()
+                    .type(PlanType.PERECO)
+                    .amount(0F)
+                    .contract(contract)
+                    .collaborator(collaborator)
+                    .managementMode(DELEGATED)
+                    .riskLevel(PRUDENT)
+                    .build();
+            accounts.add(perecoAccount);
+        }
+
 
         log.info("Saving new Collaborator Accounts to database");
         return accountRepository.saveAll(accounts);
     }
 
+
+    //TODO DO refactoring
     public List<AccountOutDto> updateAccount(AccountUpdateDto payload) {
         Collaborator collaborator = collaboratorRepository.findByEmail(user.getEmail()).get();
 
@@ -87,7 +94,7 @@ public class AccountService {
                 if (payload.peeManagementMode().isPresent()) {
                     // we want to update pereco
                     if (payload.peeRiskLevel().isPresent()
-                            && payload.peeManagementMode().get().equals(ManagementMode.DELEGATED)) {
+                            && payload.peeManagementMode().get().equals(DELEGATED)) {
                         account.setRiskLevel(payload.peeRiskLevel().get());
                     } else if (payload.perecoManagementMode().isPresent()
                             && payload.perecoManagementMode().get().equals(ManagementMode.FREE)) {
@@ -96,7 +103,7 @@ public class AccountService {
                     account.setManagementMode(payload.peeManagementMode().get());
                 } else {
                     if (payload.peeRiskLevel().isPresent()
-                            && payload.peeManagementMode().get().equals(ManagementMode.DELEGATED)) {
+                            && payload.peeManagementMode().get().equals(DELEGATED)) {
                         account.setRiskLevel(payload.peeRiskLevel().get());
                     }
                 }
@@ -105,7 +112,7 @@ public class AccountService {
                 if (payload.perecoManagementMode().isPresent()) {
                     // we want to update pereco
                     if (payload.perecoManagementMode().isPresent()
-                            && payload.perecoManagementMode().get().equals(ManagementMode.DELEGATED)) {
+                            && payload.perecoManagementMode().get().equals(DELEGATED)) {
                         account.setRiskLevel(payload.perecoRiskLevel().get());
                     } else if (payload.perecoManagementMode().isPresent()
                             && payload.perecoManagementMode().get().equals(ManagementMode.FREE)) {
@@ -114,7 +121,7 @@ public class AccountService {
                     account.setManagementMode(payload.perecoManagementMode().get());
                 } else {
                     if (payload.perecoRiskLevel().isPresent()
-                            && payload.perecoManagementMode().get().equals(ManagementMode.DELEGATED)) {
+                            && payload.perecoManagementMode().get().equals(DELEGATED)) {
                         account.setRiskLevel(payload.perecoRiskLevel().get());
                     }
                 }
@@ -122,7 +129,7 @@ public class AccountService {
             }
         }
         collaborator = collaboratorRepository.saveAndFlush(collaborator);
-        return collaborator.getAccountList().stream().map((obj) -> accountMapper.mapToAccountOutDto(obj))
-                .collect(Collectors.toList());
+        return collaborator.getAccountList().stream().map(accountMapper::mapToAccountOutDto)
+                .toList();
     }
 }
